--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>benfinnstrom.com</title>
 	<link rel="shortcut icon" href="Favicon.ico">
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=0, maximum-scale=1">
 	<link rel="stylesheet" href="200929 Styles.css">
 </head>	
 <body> 
