--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en-US">
+<!--"No website builders were used in the making of this website"--> 
 <head>
 	<title>benfinnstrom.com</title>
 	<link rel="shortcut icon" href="Favicon.ico">
